--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ opacity: 0.8;
     padding: 2em;
     display: flex;
     justify-content: space-between;
+    justify-content: center;
 }
 
 .footer-title span{
@@ -231,6 +232,7 @@ opacity: 0.8;
     background-color: #f0f0f0;
     border-radius: 10px;
     padding: 50px 50px;
+    font-size: 20px;
 }
 
 
@@ -277,6 +279,10 @@ opacity: 0.8;
    
 }
 
+.card a{
+    text-decoration: none;
+}
+
 @media(max-width:1023px){
     header{
         padding: 12px 20px;
@@ -308,6 +314,8 @@ opacity: 0.8;
     }
 
 }
+
+
 
 
 @media(max-width:641px){
